2012-10-03  Simon Fraser  <simon.fraser@apple.com>

        Make the status bubble iframe big enough to show all the bubbles
        https://bugs.webkit.org/show_bug.cgi?id=98329

        Reviewed by Eric Seidel.

        Make the status bubble iframe big enough.

        * template/en/custom/attachment/edit.html.tmpl:
        * template/en/custom/attachment/list.html.tmpl:

2012-10-03  Simon Pena  <spena@igalia.com>

        ruby1.9 fails in PrettyPatch.rb with invalid byte sequence in UTF-8
        https://bugs.webkit.org/show_bug.cgi?id=91212

        Reviewed by Hajime Morita.

        ruby1.9 changed the way it handles encoding, so the gsub method used
        when normalizing line ending complains of invalid byte sequence in UTF-8.
        This patch uses the "encode" string method for versions of Ruby >= 1.9
        to provide the encoding conversion (keeping the current implementation in
        Ruby 1.8).

        * PrettyPatch/PrettyPatch.rb: Use the "encode" string method for encoding
        conversion when the Ruby version is >= 1.9.

2012-09-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r129521.
        http://trac.webkit.org/changeset/129521
        https://bugs.webkit.org/show_bug.cgi?id=97710

        Broke autocomplete on enter_bug.cgi (Requested by abarth on
        #webkit).

        * committers-autocomplete.js:

2012-09-25  Peter Gal  <galpeter@inf.u-szeged.hu>

        committers-autocomplete.js works only with WebKit based browsers
        https://bugs.webkit.org/show_bug.cgi?id=66752

        Reviewed by Darin Adler.

        Modified the code do only add event listeners to the given inputs,
        and not to the full document.

        * committers-autocomplete.js:

2012-09-24  Peter Beverloo  <peter@chromium.org>

        Allow robots to index bugs on Bugzilla
        https://bugs.webkit.org/show_bug.cgi?id=95688

        Reviewed by Eric Seidel.
